# 02

FastAPI-2/: pyproject.toml  requirements.txt
FastAPI-2/contacts_api/: alembic.ini
FastAPI-2/contacts_api/contacts_api/: auth.py  database.py  main.py  models_contact.py  schemas.py
FastAPI-2/contacts_api/contacts_api/routes/: auth.py  contacts.py
FastAPI-2/contacts_api/contacts_api/services/: auth.py
FastAPI-2/contacts_api/migrations/: env.py
FastAPI-2/contacts_api/migrations/versions/: 2bd4943090c4_initial_migration.py  634e78ccdbb8_initial_migration.py
