[tool.poetry]
name = "fastapi-2"
version = "0.1.0"
description = ""
authors = ["mitrochin <mitrochin666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
